[metadata]
name = lenden
version = 0.0.1.0
author = Camilo A. Monreal
author_email = camilomonreal@vhio.net
description = Import and Export data for Radiomics Workflows.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/radiomicsvhio/lenden
project_urls =
    Bug Tracker = https://github.com/radiomicsvhio/lenden/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src